# LearningOpenGL

./: .gitignore  CMakeLists.txt
assets/shaders/: frag.glsl  fraglight.glsl  vert.glsl
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
src/app/: App.cpp  App.hpp
src/gfx/: Camera.cpp  Camera.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Transform.hpp
